# RSSFM

./: .gitignore  Cargo.toml  README.md  katex-header.html  make_doc.sh
examples/: compute_probability_density_2d.rs  diagonal_ionized_maximum.rs  itm_evol_1d.rs  prob_density.hdf5  slice2d.rs  zeroed_wf.rs
examples/itm_examples/: initial_state.input
examples/time_evol/: t.npy
src/: config.rs  evolution.rs  field.rs  flow.rs  gauge.rs  lib.rs  macros.rs  main.rs  parameters.rs  pml.rs  potentials.rs  tsurff.rs  volkov.rs  wave_function.rs
src/analitic/: IR.py  analitic.ipynb  functions.py
src/analitic/.ipynb_checkpoints/: IR-checkpoint.py  analitic-checkpoint.ipynb
src/analitic/AsymptoticCoefficient/: Analitic.nb  AsymptoticCoefficient.ipynb  Shivka.ipynb
src/analitic/AsymptoticCoefficient/.ipynb_checkpoints/: AsymptoticCoefficient-checkpoint.ipynb  Shivka-checkpoint.ipynb
src/analitic/SoftCoulomb1D_bound_states/: SoftCoulomb1D_ground_states.ipynb
src/analitic/SoftCoulomb1D_bound_states/.ipynb_checkpoints/: SoftCoulomb1D_ground_states-checkpoint.ipynb
src/common/: mod.rs  particle.rs  representation.rs  tspace.rs  units.rs
src/crank_nicolson/: mod.rs
src/crank_nicolson/dim1/: ecs_grid.rs  mod.rs  propagator.rs
src/dim1/: fft_maker.rs  field.rs  gauge.rs  ioniz_prob.rs  mod.rs  space.rs  ssfm.rs  ssfm_in_imaginary_time.rs  time_fft.rs  wave_function.rs
src/dim2/: fft_maker.rs  field.rs  flow.rs  gauge.rs  ioniz_prob.rs  mod.rs  potentials.rs  purity.rs  purity_diagnostics.rs  single_ioniz_prob.rs  space.rs  ssfm.rs  time_fft.rs  tsurff.rs  volkov.rs  wave_function.rs
src/dim2/wave_function_processing/: mod.rs  symmetrized_product.rs
src/dim3/: fft_maker.rs  field.rs  flow.rs  gauge.rs  space.rs  ssfm.rs  time_fft.rs  wave_function.rs
src/dim4/: fft_maker.rs  field.rs  flow.rs  gauge.rs  ioniz_prob.rs  mod.rs  probability_density_2d.rs  space.rs  ssfm.rs  time_fft.rs  wave_function.rs  wave_function_slice_2d.rs
src/dim4/wave_function_processing/: mod.rs  probability_density_2d.rs  symmetrized_product.rs  wave_function_slice_2d.rs
src/imaginary_time_evolution/: mod.rs
src/imaginary_time_evolution/dim1/: mod.rs  ssfm_imaginary_time.rs  tests.rs  wave_function_impl.rs
src/imaginary_time_evolution/dim2/: main.rs  mod.rs  ssfm_imaginary_time.rs  tests.rs  wave_function_impl.rs
src/imaginary_time_evolution/dim4/: mod.rs  ssfm_imaginary_time.rs  tests.rs  wave_function_impl.rs
src/potentials/: absorbing_potentials.rs  mod.rs  potentials.rs
src/python/: FFT_without_center.py  flow.py  norm_diff_and_flux.py  plot_psi_p_time_slises.py  plot_psilgvg.py  plot_tsurff.py  plot_volkov.py
src/python/arrays_saved/time_evol/: t.npy
src/tests/: cwf2d.rs  flow.rs  gauss.rs  mod.rs  pml.rs  tsurff.rs
src/traits/: fft_maker.rs  field.rs  flow.rs  gauge.rs  gauss.rs  logcolormap.rs  mod.rs  potentials.rs  space.rs  ssfm.rs  ssfm_imaginary_time.rs  ssfm_in_imaginary_time.rs  tsurff.rs  volkov.rs  wave_function.rs
src/utils/: TISE1D.py  TISE2D.py  ToData1D.py  ToData2D.py  ToData3D.py  convert.py  diagonal.rs  double_ion_momentum_distr.rs  get_ioniz_prob.py  hdf5_interface.rs  heatmap.rs  integrate_y1y2.rs  keldysh_parameter  logcolormap.rs  memory  mod.rs  plot_log.rs  processing.rs  symmetrized_noninteracting_wf_2e1d.rs
