[package]
name = "RSSFM2D"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
name = "rssfm"
path = "src/lib.rs"

# ======================== Расчетные бинарники ========================================
# br circular polarization + tsurff
[[bin]]
name = "br_2d_external"
path = "src/out/br_circular_polarization/dim2/external/br_2d_external.rs"

[[bin]]
name = "br_2d_inner"
path = "src/out/br_circular_polarization/dim2/inner/br_2d_inner.rs"

[[bin]]
name = "br_dimd"
path = "src/out/br_circular_polarization/dim2/ion_momentum_distribution/dimd.rs"

# br linear polarization
[[bin]]
name = "br_1e1d_external"
path = "src/out/br_linear_polarization/dim1/external/br_1e1d_external.rs"

[[bin]]
name = "br_1e1d_inner"
path = "src/out/br_linear_polarization/dim1/inner/br_1e1d_inner.rs"

[[bin]]
name = "br_2e1d_sym_nonint_wf"
path = "src/out/br_linear_polarization/dim1/sym_nonint_wf2e1d/br_2e1d_sym_nonint_wf.rs"


# тестировка 4d
[[bin]]
name = "main4d"
path = "src/out/dim4/main4d.rs"

# тестировка 1d
[[bin]]
name = "main1d"
path = "src/out/dim1/main1d.rs"

# тестировка 2d
[[bin]]
name = "main2d"
path = "src/out/dim2/main2d.rs"

# осциллятор 2d
[[bin]]
name = "oscillator2d"
path = "src/out/dim2/oscillator/oscillator2d.rs"

# тестировка
[[bin]]
name = "main"
path = "src/main.rs"

# утилита для оценки памяти
[[bin]]
name = "memory"
path = "src/bin/memory.rs"

[dependencies]
ndarray = "0.15"
ndrustfft = "0.4.0"
ndarray-npy = "0.8.1"
num-complex = "0.4.6"
rayon = "1.10.0"
itertools = "0.13.0"
plotters = "0.3.7"
plotly = "0.12.1"
colorous = "1.0.15"
colorgrad = "0.6"
hdf5 = "0.8.1"
num-traits = "0.2.12"
# GSL = "7.0.0"

# [features]
# dim1 = []          # 1D реализация
# dim2 = []          # 2D реализация (текущий код)
# dim4 = []          # 4D реализация (текущий код)
# default = ["dim4"] # По умолчанию
