[package]
name = "RSSFM2D"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
name = "rssfm"
path = "src/lib.rs"
# ============== 1D тест мнимого времени ==========================
[[bin]]
name = "itm_evolution_1d"
path = "src/out/dim1/itm_evolution/itm_evolution_1d.rs"

# ======================== Расчетные бинарники ========================================
# 2e2d br new E0035 T13
[[bin]]
name = "external_1e2d"
path = "src/out/br2e2d_E0035_T13/external/external_1e2d.rs"

[[bin]]
name = "inner_1e2d"
path = "src/out/br2e2d_E0035_T13/inner/inner_1e2d.rs"

[[bin]]
name = "sym_nonint_wf_2e2d"
path = "src/out/br2e2d_E0035_T13/sym_nonint_wf_2e2d/sym_nonint_wf_2e2d.rs"

# 3D тестировка
[[bin]]
name = "main3d"
path = "src/out/dim3/main3d.rs"

# 3D основное состояние
[[bin]]
name = "init_state3d"
path = "src/out/dim3/init_state/init_state3d.rs"

# 3D ионизация
[[bin]]
name = "ioniz_1e3d"
path = "src/out/dim3/ioniz_1e3d/ioniz_1e3d.rs"

# 2D тестировка
[[bin]]
name = "main2d"
path = "src/out/dim2/main2d.rs"

# br circular polarization + tsurff
[[bin]]
name = "br_2d_external"
path = "src/out/br_circular_polarization/dim2/external/br_2d_external.rs"

[[bin]]
name = "br_2d_inner"
path = "src/out/br_circular_polarization/dim2/inner/br_2d_inner.rs"

[[bin]]
name = "br_dimd"
path = "src/out/br_circular_polarization/dim2/ion_momentum_distribution/dimd.rs"

# br linear polarization
[[bin]]
name = "br_1e1d_external"
path = "src/out/br_linear_polarization/dim1/external/br_1e1d_external.rs"

[[bin]]
name = "br_1e1d_inner"
path = "src/out/br_linear_polarization/dim1/inner/br_1e1d_inner.rs"

[[bin]]
name = "br_2e1d_sym_nonint_wf"
path = "src/out/br_linear_polarization/dim1/sym_nonint_wf2e1d/br_2e1d_sym_nonint_wf.rs"

[[bin]]
name = "br_2e1d_int"
path = "src/out/br_linear_polarization/dim1/int_2e1d/br_2e1d_int.rs"


# br linear polarization MODEL 6.75 3.37
[[bin]]
name = "model_br_6_75_3_37_external"
path = "src/out/model_br_2_lin_polariz/external/model_br_6_75_3_37_external.rs"

[[bin]]
name = "model_br_6_75_3_37_inner"
path = "src/out/model_br_2_lin_polariz/inner/model_br_6_75_3_37_inner.rs"

[[bin]]
name = "model_br_6_75_3_37_sym_nonint_wf"
path = "src/out/model_br_2_lin_polariz/sym_nonint_wf2e1d/model_br_6_75_3_37_sym_nonint_wf.rs"

[[bin]]
name = "int_wf2e1d"
path = "src/out/model_br_2_lin_polariz/int_wf2e1d/int_wf2e1d.rs"


# тестировка 4d
[[bin]]
name = "main4d"
path = "src/out/dim4/main4d.rs"

# 4d основное состояние
[[bin]]
name = "init_state4d"
path = "src/out/dim4/init_state/init_state4d.rs"

# 4d ионизация
[[bin]]
name = "ioniz_2e2d"
path = "src/out/dim4/ioniz_2e2d/ioniz_2e2d.rs"

# тестировка 1d
[[bin]]
name = "main1d"
path = "src/out/dim1/main1d.rs"

# начальное состояние 2d
[[bin]]
name = "init_state2d"
path = "src/out/dim2/init_state/init_state2d.rs"

# 1e2d ионизация 2d
[[bin]]
name = "ioniz_1e2d"
path = "src/out/dim2/ioniz_1e2d/ioniz_1e2d.rs"

# 2e1d ионизация 2d
[[bin]]
name = "ioniz_2e1d"
path = "src/out/dim2/ioniz_2e1d/ioniz_2e1d.rs"

# осциллятор 2d
[[bin]]
name = "oscillator2d"
path = "src/out/dim2/oscillator/oscillator2d.rs"

# 1d inner
[[bin]]
name = "inner1d"
path = "src/out/dim1/ionization/inner/inner.rs"

# 1d external
[[bin]]
name = "external1d"
path = "src/out/dim1/ionization/external/external.rs"

# тестировка
[[bin]]
name = "main"
path = "src/main.rs"

# утилита для оценки памяти
[[bin]]
name = "memory"
path = "src/bin/memory.rs"

# параметр Келдышаname = "memory"
[[bin]]
name = "keldysh_parameter"
path = "src/bin/keldysh_parameter.rs"

# ========== Бинарники для тестов эволюции в мнимом времени =========================

[[bin]]
name = "test_imag_time_1d"
path = "src/imaginary_time_evolution/dim1/tests.rs"

[[bin]]
name = "test_imag_time_2d"
path = "src/imaginary_time_evolution/dim2/tests.rs"

[dependencies]
ndarray = "0.15"
ndrustfft = "0.4.0"
ndarray-npy = "0.8.1"
num-complex = "0.4.6"
rayon = "1.10.0"
itertools = "0.13.0"
plotters = "0.3.7"
plotly = "0.12.1"
colorous = "1.0.15"
colorgrad = "0.6"
hdf5 = "0.8.1"
num-traits = "0.2.12"
meval = "0.2"
toml = "0.9.7"
serde = "1.0.228"
clap = "4.5.48"
# GSL = "7.0.0"

# [features]
# dim1 = []          # 1D реализация
# dim2 = []          # 2D реализация (текущий код)
# dim4 = []          # 4D реализация (текущий код)
# default = ["dim4"] # По умолчанию
